match3/src/snapshots/match3__tests__Horizontal line.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Horizontal line
Board: 
╭───╮
│rrr│
╰───╯
Match #0:
╭───╮
│rrr│
╰───╯
Remaining cells:
╭───╮
│   │
╰───╯
