match3/src/snapshots/match3__tests__Incomplete horizontal line.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Incomplete horizontal line
Board: 
╭───╮
│rr-│
╰───╯
No matches
