match3/src/snapshots/match3__tests__Incomplete vertical line.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Incomplete vertical line
Board: 
╭─╮
│r│
│r│
│-│
╰─╯
No matches
