match3/src/snapshots/match3__tests__Vertical line.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Vertical line
Board: 
╭─╮
│r│
│r│
│r│
╰─╯
Match #0:
╭─╮
│r│
│r│
│r│
╰─╯
Remaining cells:
╭─╮
│ │
│ │
│ │
╰─╯
