match3/src/snapshots/match3__tests__combine_neighbours.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should combine neighboring groups when merge_neighbours=true
Board: 
╭─────╮
│rrr--│
│--rrr│
╰─────╯
Match #0:
╭─────╮
│rrr  │
│  rrr│
╰─────╯
Remaining cells:
╭─────╮
│   --│
│--   │
╰─────╯
