match3/src/snapshots/match3__tests__different_types.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Different Types
Board: 
╭────╮
│rrgg│
╰────╯
No matches
