match3/src/snapshots/match3__tests__dont_combine_neighbours.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should not combine neighboring groups when merge_neighbours=false
Board: 
╭─────╮
│rrr--│
│--rrr│
╰─────╯
Match #0:
╭─────╮
│rrr  │
│     │
╰─────╯
Match #1:
╭─────╮
│     │
│  rrr│
╰─────╯
Remaining cells:
╭─────╮
│   --│
│--   │
╰─────╯
