match3/src/snapshots/match3__tests__empty_board.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Empty Board
Board: 
╭─────╮
│-----│
│-----│
│-----│
│-----│
│-----│
╰─────╯
No matches
