match3/src/snapshots/match3__tests__horizontal_line.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Horizontal Line
Board: 
╭───╮
│rrr│
╰───╯
Match #0:
╭───╮
│rrr│
╰───╯
Remaining cells:
╭───╮
│   │
╰───╯
