match3/src/snapshots/match3__tests__incomplete_horizontal_line.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should not match incomplete horizontal line
Board: 
╭───╮
│rr-│
╰───╯
No matches
