match3/src/snapshots/match3__tests__incomplete_vertical_line.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Incomplete Vertical Line
Board: 
╭─╮
│r│
│r│
│-│
╰─╯
No matches
